Update Links for Settings and Contacts

--- a/PersonalDesktopOnline/WebContent/index.html
+++ b/PersonalDesktopOnline/WebContent/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<div id="options">
-			<a href="settings.html">
+			<a href="settings.jsp">
 				<img class="option_icon" src="images/gear.png" alt="Options">
 			</a>
 		</div>
@@ -40,7 +40,7 @@
 				</a>
 			</div-->
 			<div id="contacts">
-				<a href="contacts.html">
+				<a href="contacts.jsp">
 					<img class="contacts_img" src="images/contacts3.png" alt="Kontakte">
 				</a>
 			</div>
