First functional prototype of the note-feature.

--- a/PersonalDesktopOnline/WebContent/index.html
+++ b/PersonalDesktopOnline/WebContent/index.html
@@ -12,7 +12,7 @@
 		</div>
 		<div>
 			<div id="notes">
-				<a href="notes.html">
+				<a href="NotesServlet">
 					<img class="notes_img" src="images/notizblock2.png" alt="Notizen">
 				</a>
 			</div>
