--- a/PersonalDesktopOnline/WebContent/index.html
+++ b/PersonalDesktopOnline/WebContent/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="UTF-8">
 
-  <title>CodePen - Sign Up/Login Box</title>
+  <title>PDO - Sign Up/Login</title>
 
     <link rel="stylesheet" href="styles/LogInStyle.css">
 
