--- a/PersonalDesktopOnline/WebContent/protected/home.html
+++ b/PersonalDesktopOnline/WebContent/protected/home.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>PDO</title>
-		<link rel="stylesheet" type="text/css" href="styles/style.css"/>
+		<link rel="stylesheet" type="text/css" href="../styles/style.css"/>
 	</head>
 	<body>
 		<div id="options">
@@ -32,7 +32,7 @@
 			<div id="news">
 				<a href="news.html">
 					<img class="news_img" src="images/news4.png" alt="Zeitung">
-				</a>
+				</a>   
 			</div>
 			<!--div id="contacts">
 				<a href="contacts.html">
