actual Contacts Css-Krams

--- a/PersonalDesktopOnline/WebContent/protected/newContact.html
+++ b/PersonalDesktopOnline/WebContent/protected/newContact.html
@@ -2,7 +2,13 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="scripts/kickstart.js"></script> <!-- KICKSTART -->
+<link rel="stylesheet" href="css/kickstart-forms.css" media="all" /> <!-- KICKSTART -->
 <link rel="stylesheet" type="text/css" href="styles/ContactForm.css">
+<link rel="stylesheet" type="text/css" href="styles/Scrollbar.css">
+
 <title>PDO - Neuer Kontakt</title>
 </head>
 <div id="form-header">
