Kontakt Zeugs funktioniert noch nicht!!!

--- a/PersonalDesktopOnline/WebContent/protected/newContact.html
+++ b/PersonalDesktopOnline/WebContent/protected/newContact.html
@@ -5,9 +5,9 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="scripts/kickstart.js"></script> <!-- KICKSTART -->
-<link rel="stylesheet" href="css/kickstart-forms.css" media="all" /> <!-- KICKSTART -->
-<link rel="stylesheet" type="text/css" href="styles/ContactForm.css">
-<link rel="stylesheet" type="text/css" href="styles/Scrollbar.css">
+<link rel="stylesheet" href="../css/kickstart-forms.css" media="all" /> <!-- KICKSTART -->
+<link rel="stylesheet" type="text/css" href="../styles/ContactForm.css">
+<link rel="stylesheet" type="text/css" href="../styles/Scrollbar.css">
 
 <title>PDO - Neuer Kontakt</title>
 </head>
@@ -17,7 +17,8 @@
     </div>
 <body>
 <form method="POST" action="ContactServlet"> 
-	<div id="form">	 	
+	<div id="form">
+	 	
 	 	<div>
 			<label for="prename">Vorname: </label>
 		 	<input type="text" name="prename" placeholder="Vorname">
